Social widget alignment fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1309,7 +1309,8 @@ footer .widget.profile .twitter span {
 
 .widget.profile .bk-profile-socialicons span a, .widget.socialicons a {
     text-decoration: none;
-    text-indent: -9999px;
+    text-indent: 9999px;
+    overflow: hidden;
     white-space: nowrap;
     height: 32px;
     width: 32px;
